--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -6,11 +6,17 @@ mat-card {
   width: calc(100% - 32px);
   margin: 24px auto;
   border-radius: 0px 0px 8px 8px;
-  /*box-shadow: 2px 2px 2px #ccc;
-  background-color: transparent;*/
 
   mat-toolbar {
     border-radius: 8px 8px 0px 0px;
   }
 
+}
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 32px;
+  background-color: #f6f6f6;
 }
