--- a/crud-angular/src/app/shared/components/error-dialog/error-dialog.component.html
+++ b/crud-angular/src/app/shared/components/error-dialog/error-dialog.component.html
@@ -1,1 +1,10 @@
-<p>error-dialog works!</p>
+
+<div class="dialog-error-card">
+  <h2 mat-dialog-title>Error</h2>
+  <mat-dialog-content><p>{{data}}</p></mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button mat-dialog-close>Close</button>
+  </mat-dialog-actions>
+</div>
+
+
