--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -13,6 +13,12 @@ mat-card {
 
 }
 
+.category {
+  display: flex;
+  align-items: center;
+  height: 51px;
+}
+
 .loading-spinner {
   display: flex;
   justify-content: center;
