--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -3,19 +3,19 @@
   <mat-card-content>
     <div *ngIf="courses$ | async as courses; else loading">
       <table mat-table [dataSource]="courses">
-        <!-- Id Column -->
+        <!-- Column -->
         <ng-container matColumnDef="_id">
           <th mat-header-cell *matHeaderCellDef>Id</th>
           <td mat-cell *matCellDef="let course">{{ course._id }}</td>
         </ng-container>
 
-        <!-- Name Column -->
+        <!-- Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let course">{{ course.name }}</td>
         </ng-container>
 
-        <!-- Category Column -->
+        <!-- Column -->
         <ng-container matColumnDef="category" >
           <th mat-header-cell *matHeaderCellDef>Category</th>
           <td mat-cell *matCellDef="let course" class="category">
