--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -24,6 +24,26 @@
           </td>
         </ng-container>
 
+        <!-- Column -->
+        <ng-container matColumnDef="actions">
+
+            <mat-header-cell *matHeaderCellDef>
+              <button mat-mini-fab color="primary" aria-label="Add course">
+                <mat-icon>add</mat-icon>
+              </button>
+            </mat-header-cell>
+
+            <mat-cell *matCellDef="let course">
+              <button mat-icon-button color="primary" aria-label="Edit course">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button  color="primary" aria-label="Delete course">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </mat-cell>
+
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
