--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -28,7 +28,7 @@
         <ng-container matColumnDef="actions" class="column-actions">
             <mat-header-cell *matHeaderCellDef>
               <button mat-mini-fab color="primary" aria-label="Add course" (click)="onAdd()">
-                <mat-icon (click)="onAdd()">add</mat-icon>
+                <mat-icon >add</mat-icon>
               </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let course">
