--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -31,7 +31,7 @@
                 <mat-icon >add</mat-icon>
               </button>
             </mat-header-cell>
-            <mat-cell *matCellDef="let course">
+            <mat-cell *matCellDef="let course" class="column-actions-fix-cell">
               <button mat-icon-button color="primary" aria-label="Edit course">
                 <mat-icon>edit</mat-icon>
               </button>
