--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,20 @@
-<p>course-form works!</p>
+<mat-card class="card">
+  <mat-toolbar color="primary">
+   Course Detail
+  </mat-toolbar>
+  <mat-card-content>
+    <form [formGroup]="form" >
+      <mat-form-field class="full-width form-min-width">
+        <input matInput placeholder="Name" formControlName="name">
+      </mat-form-field>
+
+      <mat-form-field class="full-width form-min-width">
+        <input matInput placeholder="Category" formControlName="category">
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions class="form-actions-container">
+    <button mat-raised-button (click)="onCancel()">cancel</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">save</button>
+  </mat-card-actions>
+</mat-card>
