--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -9,7 +9,12 @@
       </mat-form-field>
 
       <mat-form-field class="full-width form-min-width">
-        <input matInput placeholder="Category" formControlName="category">
+        <mat-label>Category</mat-label>
+        <mat-select formControlName="category">
+          <mat-option value="null"></mat-option>
+          <mat-option value="frontend">Frontend</mat-option>
+          <mat-option value="backend">Backend</mat-option>
+        </mat-select>
       </mat-form-field>
     </form>
   </mat-card-content>
