--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -12,8 +12,8 @@
         <mat-label>Category</mat-label>
         <mat-select formControlName="category">
           <mat-option value="null"></mat-option>
-          <mat-option value="frontend">Frontend</mat-option>
-          <mat-option value="backend">Backend</mat-option>
+          <mat-option value="front-end">Front-end</mat-option>
+          <mat-option value="back-end">Back-end</mat-option>
         </mat-select>
       </mat-form-field>
     </form>
