--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,55 +1,14 @@
 <mat-card>
   <mat-toolbar color="primary"> Cursos </mat-toolbar>
-  <mat-card-content>
-    <div *ngIf="courses$ | async as courses; else loading">
-      <table mat-table [dataSource]="courses">
-        <!-- Column -->
-        <ng-container matColumnDef="_id">
-          <th mat-header-cell *matHeaderCellDef>Id</th>
-          <td mat-cell *matCellDef="let course">{{ course._id }}</td>
-        </ng-container>
-
-        <!-- Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let course">{{ course.name }}</td>
-        </ng-container>
-
-        <!-- Column -->
-        <ng-container matColumnDef="category" >
-          <th mat-header-cell *matHeaderCellDef>Category</th>
-          <td mat-cell *matCellDef="let course" class="category">
-            <mat-icon aria-hidden="false" aria-label="Course category" fontIcon="{{ course.category | category }}"></mat-icon>
-            {{ course.category }}
-          </td>
-        </ng-container>
-
-        <!-- Column Actions-->
-        <ng-container matColumnDef="actions" class="column-actions">
-            <mat-header-cell *matHeaderCellDef>
-              <button mat-mini-fab color="primary" aria-label="Add course" (click)="onAdd()">
-                <mat-icon >add</mat-icon>
-              </button>
-            </mat-header-cell>
-            <mat-cell *matCellDef="let course" class="column-actions-fix-cell">
-              <button mat-icon-button color="primary" aria-label="Edit course">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-icon-button  color="primary" aria-label="Delete course">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </mat-cell>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-    </div>
-
-    <ng-template #loading>
-      <div class="loading-spinner">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
-  </mat-card-content>
+  <div class="column-flex">
+    <app-courses-list *ngIf="courses$ | async as courses; else loading"
+    [coursesData] = "courses"></app-courses-list>
+    <mat-card-content>
+      <ng-template #loading>
+        <div class="loading-spinner">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
+    </mat-card-content>
+  </div>
 </mat-card>
