--- a/crud-angular/src/app/courses/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/courses-list/courses-list.component.html
@@ -23,7 +23,7 @@
   <!-- Column Actions-->
   <ng-container matColumnDef="actions" >
       <mat-header-cell *matHeaderCellDef class="column-actions">
-        <button mat-mini-fab color="primary" aria-label="Add course" (add)="onAddComponent()">
+        <button mat-mini-fab color="primary" aria-label="Add course" (click)="onAdd()">
           <mat-icon >add</mat-icon>
         </button>
       </mat-header-cell>
