--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -3,7 +3,7 @@
   <div class="column-flex">
     <app-courses-list *ngIf="courses$ | async as courses; else loading"
     [coursesData] = "courses"
-    (add)="onAdd()"></app-courses-list>
+    (add)="onAdd()" (edit)="onEdit($event)"></app-courses-list>
     <mat-card-content>
       <ng-template #loading>
         <div class="loading-spinner">
