--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -31,7 +31,7 @@
         <button mat-icon-button color="primary" aria-label="Edit course" (click)="onEdit(course)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button  color="primary" aria-label="Delete course">
+        <button mat-icon-button  color="primary" aria-label="Delete course" (click)="onDelete(course)">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-cell>
