--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -5,7 +5,7 @@
     [coursesData] = "courses"
     (add)="onAdd()"
     (edit)="onEdit($event)"
-    (remove)="onEdit($event)"></app-courses-list>
+    (remove)="onRemove($event)"></app-courses-list>
     <mat-card-content>
       <ng-template #loading>
         <div class="loading-spinner">
