--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -5,21 +5,26 @@
   <mat-card-content>
     <form [formGroup]="form" >
       <mat-form-field class="full-width form-min-width">
-        <input matInput placeholder="Name" formControlName="name">
+        <input matInput placeholder="Name" formControlName="name" required>
+        @if (form.get('name')?.invalid) {
+          <mat-error> {{ errorMessage("name") }} </mat-error>
+        }
       </mat-form-field>
-
       <mat-form-field class="full-width form-min-width">
         <mat-label>Category</mat-label>
-        <mat-select formControlName="category">
+        <mat-select formControlName="category" required>
           <mat-option value="null"></mat-option>
           <mat-option value="front-end">Front-end</mat-option>
           <mat-option value="back-end">Back-end</mat-option>
         </mat-select>
+        @if (form.get('category')?.invalid) {
+          <mat-error> {{ errorMessage("category") }} </mat-error>
+        }
       </mat-form-field>
     </form>
   </mat-card-content>
   <mat-card-actions class="form-actions-container">
-    <button mat-raised-button (click)="onCancel()">cancel</button>
-    <button mat-raised-button color="primary" (click)="onSubmit()">save</button>
+    <button mat-raised-button (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">Save</button>
   </mat-card-actions>
 </mat-card>
