--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -23,15 +23,18 @@
   <!-- Column Actions-->
   <ng-container matColumnDef="actions" >
       <mat-header-cell *matHeaderCellDef class="column-actions">
-        <button mat-mini-fab color="primary" aria-label="Add course" (click)="onAdd()">
+        <button mat-mini-fab color="primary" aria-label="Add course" (click)="onAdd()"
+        class="icon-button">
           <mat-icon >add</mat-icon>
         </button>
       </mat-header-cell>
       <mat-cell *matCellDef="let course" class="column-actions">
-        <button mat-icon-button color="primary" aria-label="Edit course" (click)="onEdit(course)">
+        <button mat-icon-button color="primary" aria-label="Edit course" (click)="onEdit(course)"
+        class="icon-button">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button  color="primary" aria-label="Delete course" (click)="onDelete(course)">
+        <button mat-icon-button  color="primary" aria-label="Delete course" (click)="onDelete(course)"
+        class="icon-button">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-cell>
