--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -5,7 +5,10 @@
   <mat-card-content>
     <form [formGroup]="form" >
       <mat-form-field class="full-width form-min-width">
-        <input matInput placeholder="Name" formControlName="name" required>
+        <input matInput placeholder="Name" formControlName="name" required #name>
+
+        <mat-hint align="end">{{name.value.length || 0 }}/100</mat-hint>
+
         @if (form.get('name')?.invalid) {
           <mat-error> {{ getErrorMessage('name') }} </mat-error>
         }
