--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -17,8 +17,8 @@
         <mat-label>Category</mat-label>
         <mat-select formControlName="category" required>
           <mat-option value="null"></mat-option>
-          <mat-option value="front-end">Front-end</mat-option>
-          <mat-option value="back-end">Back-end</mat-option>
+          <mat-option value="Front-end">Front-end</mat-option>
+          <mat-option value="Back-end">Back-end</mat-option>
         </mat-select>
         @if (form.get('category')?.invalid) {
           <mat-error> {{ getErrorMessage('category') }} </mat-error>
