--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -1,17 +1,20 @@
-<mat-card>
-  <mat-toolbar color="primary"> Cursos </mat-toolbar>
-  <div class="column-flex">
-    <app-courses-list *ngIf="courses$ | async as courses; else loading"
-    [coursesData] = "courses"
-    (add)="onAdd()"
-    (edit)="onEdit($event)"
-    (remove)="onRemove($event)"></app-courses-list>
-    <mat-card-content>
-      <ng-template #loading>
-        <div class="loading-spinner">
-          <mat-spinner></mat-spinner>
-        </div>
-      </ng-template>
-    </mat-card-content>
-  </div>
-</mat-card>
+<div class="page-content">
+  <mat-card>
+    <mat-toolbar color="primary"> Cursos </mat-toolbar>
+    <div class="column-flex">
+      <app-courses-list *ngIf="courses$ | async as courses; else loading"
+      [coursesData] = "courses"
+      (add)="onAdd()"
+      (edit)="onEdit($event)"
+      (remove)="onRemove($event)"></app-courses-list>
+      <mat-card-content>
+        <ng-template #loading>
+          <div class="loading-spinner">
+            <mat-spinner></mat-spinner>
+          </div>
+        </ng-template>
+      </mat-card-content>
+    </div>
+  </mat-card>
+</div>
+
