--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -22,6 +22,47 @@
           <mat-error> {{ getErrorMessage('category') }} </mat-error>
         }
       </mat-form-field>
+
+      <mat-toolbar>
+
+            <span>Lessons</span>
+            <button
+            mat-icon-button>
+              <mat-icon
+              color="accent"
+              aria-label="Add">add</mat-icon>
+            </button>
+
+      </mat-toolbar>
+
+
+            <table style="width: 100%" formArrayName="lessons"
+            *ngFor="let lesson of getLessonsFormArray(); let i = index"
+            >
+
+              <tr [formGroupName]="i">
+                <td >
+                  <mat-form-field class="full-width">
+                    <mat-label>Lesson name</mat-label>
+                    <input
+                    matInput
+                    type="text" formControlName="name"/>
+                  </mat-form-field>
+                </td>
+                <td >
+                  <mat-form-field class="full-width">
+                    <mat-label>Lesson url</mat-label>
+                    <!-- <span matPrefix>https://youtu.be</span> -->
+                    <input
+                    matInput
+                    type="text" formControlName="youtubeUrl"/>
+                  </mat-form-field>
+                </td>
+              </tr>
+            </table>
+
+
+
     </form>
   </mat-card-content>
   <mat-card-actions class="form-actions-container">
