--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -27,7 +27,9 @@
 
             <span>Lessons</span>
             <button
-            mat-icon-button>
+            mat-icon-button
+            (click)="addNewLesson()"
+            >
               <mat-icon
               color="accent"
               aria-label="Add">add</mat-icon>
@@ -57,6 +59,16 @@
                     matInput
                     type="text" formControlName="youtubeUrl"/>
                   </mat-form-field>
+                </td>
+                <td>
+
+                  <button
+                  color="warn"
+                  mat-icon-button
+                  (click)="removeLesson(i)"
+                  aria-label="Remove">
+                      <mat-icon>delete</mat-icon>
+                  </button>
                 </td>
               </tr>
             </table>
