--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -38,7 +38,7 @@
       </mat-toolbar>
 
         <mat-error
-        *ngIf="isFormArrayRequired()">
+        *ngIf="formUtils.isFormArrayRequired(form,'lessons')">
           Add at least one lesson
         </mat-error>
 
